feat(authentication): added user authentication
